# esxtop-batch-data-visualizer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  claude_todo.md  describe_extop.sh  docker-compose.yml  find_column_idx.py  get_value_by_col_index_v2_fs.py  plot_chart_form_data_file.py  pyproject.toml  requirements.txt  save_chart_from_column_id.py  todo.md
legacy/: README.md  find_column_idx.py  plot_chart_form_data_file.py  visualizer.py
scripts/: describe_extop.sh  describe_extop_web.sh  describe_physical_disk.sh  extract_column.py  extract_columns_batch.py  find_column_idx.py  summarize_columns.py  visualize_data.py
src/esxtop_visualizer/: __init__.py  extractor.py  parser.py  visualizer.py
templates/: index.html
tests/: __init__.py  test_extractor.py  test_parser.py  test_visualizer.py
